# cours_1

./: .env_template  .flake8  README.md  pyproject.toml  requirements.txt
src/: data.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
